version/0.18/_sources/examples/00-fluent/exhaust_system.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-fluent/exhaust_system.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-fluent_exhaust_system.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-fluent_exhaust_system.py:

.. _ref_exhaust_system_tui_api:

Fault-tolerant meshing workflow
-------------------------------
This example sets up and solves a three-dimensional turbulent fluid flow
in a manifold exhaust system, which is common in the automotive industry.
Predicting the flow field in the area of the mixing region is important
to designing the junction properly.

This example uses the guided workflow for fault-tolerant meshing because it
is appropriate for geometries that can have imperfections, such as gaps and
leakages.

**Workflow tasks**

The fault-tolerant meshing workflow guides you through these tasks:

- Import a CAD geometry and manage individual parts
- Generate a surface mesh
- Cap inlets and outlets
- Extract a fluid region
- Define leakages
- Extract edge features
- Set up size controls
- Generate a volume mesh

**Problem description**

In the manifold exhaust system, air flows through the three inlets
with a uniform velocity of 1 m/s. The air then exits through the outlet.
A small pipe is placed in the main portion of the manifold where edge
extraction is considered. The example also includes a known small leakage
to demonstrate the automatic leakage detection aspects of the meshing workflow.

.. GENERATED FROM PYTHON SOURCE LINES 37-46

Example Setup
-------------
Before you can use the fault-tolerant meshing workflow, you must set up the
example and initialize this workflow.

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes downloading and importing
the geometry file.

.. GENERATED FROM PYTHON SOURCE LINES 46-54

.. code-block:: default


    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    import_filename = examples.download_file(
        "exhaust_system.fmd", "pyfluent/exhaust_system"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Download successful. File path:
    /home/ansys/.local/share/ansys_fluent_core/examples/exhaust_system.fmd




.. GENERATED FROM PYTHON SOURCE LINES 56-60

Launch Fluent
~~~~~~~~~~~~~
Launch Fluent as a service in meshing mode with double precision running on
two processors.

.. GENERATED FROM PYTHON SOURCE LINES 60-63

.. code-block:: default


    meshing = pyfluent.launch_fluent(precision="double", processor_count=2, mode="meshing")








.. GENERATED FROM PYTHON SOURCE LINES 64-67

Initialize workflow
~~~~~~~~~~~~~~~~~~~
Initialize the fault-tolerant meshing workflow.

.. GENERATED FROM PYTHON SOURCE LINES 67-70

.. code-block:: default


    meshing.workflow.InitializeWorkflow(WorkflowType="Fault-tolerant Meshing")








.. GENERATED FROM PYTHON SOURCE LINES 71-80

Fault-folerant meshing workflow
-------------------------------
The fault-tolerant meshing workflow guides you through the many tasks that
follow.

Import CAD and manage parts
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the CAD geometry file (``exhaust_system.fmd``) and selectively manage some
parts.

.. GENERATED FROM PYTHON SOURCE LINES 80-114

.. code-block:: default


    meshing.PartManagement.InputFileChanged(
        FilePath=import_filename, IgnoreSolidNames=False, PartPerBody=False
    )
    meshing.PMFileManagement.FileManager.LoadFiles()
    meshing.PartManagement.Node["Meshing Model"].Copy(
        Paths=[
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/main,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/flow-pipe,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/outpipe3,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/object2,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/object1,1",
        ]
    )
    meshing.PartManagement.ObjectSetting["DefaultObjectSetting"].OneZonePer.set_state(
        "part"
    )
    cad_import = meshing.workflow.TaskObject["Import CAD and Part Management"]
    cad_import.Arguments.set_state(
        {
            "Context": 0,
            "CreateObjectPer": "Custom",
            "FMDFileName": import_filename,
            "FileLoaded": "yes",
            "ObjectSetting": "DefaultObjectSetting",
            "Options": {
                "Line": False,
                "Solid": False,
                "Surface": False,
            },
        }
    )
    cad_import.Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        loading data from '/mnt/pyfluent/exhaust_system.fmd' ...
        classifying 115 edge occurrences ...
        classified 67 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 2 edge occurrences ...
        classified 1 feature edge edge by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 5 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 13 edge occurrences ...
        classified 8 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 13 edge occurrences ...
        classified 8 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 50 edge occurrences ...
        classified 16 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
    "Meshing objects are created"




.. GENERATED FROM PYTHON SOURCE LINES 115-118

Describe geometry and flow
~~~~~~~~~~~~~~~~~~~~~~~~~~
Describe the geometry and the flow characteristics.

.. GENERATED FROM PYTHON SOURCE LINES 118-142

.. code-block:: default


    describe_geom = meshing.workflow.TaskObject["Describe Geometry and Flow"]
    describe_geom.Arguments.set_state(
        {
            "AddEnclosure": "No",
            "CloseCaps": "Yes",
            "FlowType": "Internal flow through the object",
        }
    )
    describe_geom.UpdateChildTasks(SetupTypeChanged=False)
    describe_geom.Arguments.set_state(
        {
            "AddEnclosure": "No",
            "CloseCaps": "Yes",
            "DescribeGeometryAndFlowOptions": {
                "AdvancedOptions": True,
                "ExtractEdgeFeatures": "Yes",
            },
            "FlowType": "Internal flow through the object",
        }
    )
    describe_geom.UpdateChildTasks(SetupTypeChanged=False)
    describe_geom.Execute()








.. GENERATED FROM PYTHON SOURCE LINES 143-146

Enclose openings
~~~~~~~~~~~~~~~~
Enclose (cap) any openings in the geometry.

.. GENERATED FROM PYTHON SOURCE LINES 148-151

.. image:: /_static/exhaust_system_011.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 153-156

.. image:: /_static/exhaust_system_012.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 156-282

.. code-block:: default

    capping = meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"]
    capping.Arguments.set_state(
        {
            "CreatePatchPreferences": {
                "ShowCreatePatchPreferences": False,
            },
            "PatchName": "inlet-1",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet.1"],
        }
    )
    capping.Arguments.set_state(
        {
            "CreatePatchPreferences": {
                "ShowCreatePatchPreferences": False,
            },
            "PatchName": "inlet-1",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "351.68205",
                "-361.34322",
                "-301.88668",
                "396.96205",
                "-332.84759",
                "-266.69751",
                "inlet.1",
            ],
            "ZoneSelectionList": ["inlet.1"],
        }
    )
    capping.AddChildToTask()

    capping.InsertCompoundChildTask()
    capping.Arguments.set_state({})
    meshing.workflow.TaskObject["inlet-1"].Execute()
    capping.Arguments.set_state(
        {
            "PatchName": "inlet-2",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet.2"],
        }
    )
    capping.Arguments.set_state(
        {
            "PatchName": "inlet-2",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "441.68205",
                "-361.34322",
                "-301.88668",
                "486.96205",
                "-332.84759",
                "-266.69751",
                "inlet.2",
            ],
            "ZoneSelectionList": ["inlet.2"],
        }
    )
    capping.AddChildToTask()

    capping.InsertCompoundChildTask()
    capping.Arguments.set_state({})
    meshing.workflow.TaskObject["inlet-2"].Execute()
    capping.Arguments.set_state(
        {
            "PatchName": "inlet-3",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet"],
        }
    )
    capping.Arguments.set_state(
        {
            "PatchName": "inlet-3",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "261.68205",
                "-361.34322",
                "-301.88668",
                "306.96205",
                "-332.84759",
                "-266.69751",
                "inlet",
            ],
            "ZoneSelectionList": ["inlet"],
        }
    )
    capping.AddChildToTask()

    capping.InsertCompoundChildTask()
    capping.Arguments.set_state({})
    meshing.workflow.TaskObject["inlet-3"].Execute()
    capping.Arguments.set_state(
        {
            "PatchName": "outlet-1",
            "SelectionType": "zone",
            "ZoneSelectionList": ["outlet"],
            "ZoneType": "pressure-outlet",
        }
    )
    capping.Arguments.set_state(
        {
            "PatchName": "outlet-1",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "352.22702",
                "-197.8957",
                "84.102381",
                "394.41707",
                "-155.70565",
                "84.102381",
                "outlet",
            ],
            "ZoneSelectionList": ["outlet"],
            "ZoneType": "pressure-outlet",
        }
    )
    capping.AddChildToTask()

    capping.InsertCompoundChildTask()
    capping.Arguments.set_state({})
    meshing.workflow.TaskObject["outlet-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-1 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-2 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-3 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of outlet-1 complete.




.. GENERATED FROM PYTHON SOURCE LINES 283-286

Extract edge features
~~~~~~~~~~~~~~~~~~~~~
Extract edge features.

.. GENERATED FROM PYTHON SOURCE LINES 286-308

.. code-block:: default

    edge_features = meshing.workflow.TaskObject["Extract Edge Features"]
    edge_features.Arguments.set_state(
        {
            "ExtractMethodType": "Intersection Loops",
            "ObjectSelectionList": ["flow_pipe", "main"],
        }
    )
    edge_features.AddChildToTask()

    edge_features.InsertCompoundChildTask()
    edge_group = meshing.workflow.TaskObject["edge-group-1"]
    edge_group.Arguments.set_state(
        {
            "ExtractEdgesName": "edge-group-1",
            "ExtractMethodType": "Intersection Loops",
            "ObjectSelectionList": ["flow_pipe", "main"],
        }
    )
    edge_features.Arguments.set_state({})

    edge_group.Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_ExtractEdges:
     ExtractEdgesName : edge-group-1
     ExtractMethodType : Intersection Loops
     SelectionType : object
     ObjectSelectionList: (flow_pipe main)
     GeomObjectSelectionList: ()
     ZoneSelectionList: ()
      ZoneLocation:()
     LabelSelectionList : ()
     FeatureAngleLocal : 40
     IndividualCollective : collectively
     SharpAngle : 110




.. GENERATED FROM PYTHON SOURCE LINES 309-312

Identify regions
~~~~~~~~~~~~~~~~
Identify regions.

.. GENERATED FROM PYTHON SOURCE LINES 312-386

.. code-block:: default

    identify_regions = meshing.workflow.TaskObject["Identify Regions"]
    identify_regions.Arguments.set_state(
        {
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneSelectionList": ["main.1"],
        }
    )
    identify_regions.Arguments.set_state(
        {
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneLocation": [
                "1",
                "213.32205",
                "-225.28068",
                "-158.25531",
                "541.32205",
                "-128.32068",
                "84.102381",
                "main.1",
            ],
            "ZoneSelectionList": ["main.1"],
        }
    )
    identify_regions.AddChildToTask()

    identify_regions.InsertCompoundChildTask()
    fluid_region_1 = meshing.workflow.TaskObject["fluid-region-1"]
    fluid_region_1.Arguments.set_state(
        {
            "MaterialPointsName": "fluid-region-1",
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneLocation": [
                "1",
                "213.32205",
                "-225.28068",
                "-158.25531",
                "541.32205",
                "-128.32068",
                "84.102381",
                "main.1",
            ],
            "ZoneSelectionList": ["main.1"],
        }
    )
    identify_regions.Arguments.set_state({})

    fluid_region_1.Execute()
    identify_regions.Arguments.set_state(
        {
            "MaterialPointsName": "void-region-1",
            "NewRegionType": "void",
            "ObjectSelectionList": ["inlet-1", "inlet-2", "inlet-3", "main"],
            "X": 374.722045740589,
            "Y": -278.9775145640143,
            "Z": -161.1700719416913,
        }
    )
    identify_regions.AddChildToTask()

    identify_regions.InsertCompoundChildTask()

    identify_regions.Arguments.set_state({})

    meshing.workflow.TaskObject["void-region-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_MaterialPoints:
     AddChild: yes
     MaterialPointsName : fluid-region-1
     MptMethodType : Centroid of Objects
     NewRegionType : fluid
     LinkConstruction : no
     SelectionType : zone
     ZoneSelectionList : (main.1)
     ZoneLocation : (1 213.32205 -225.28068 -158.25531 541.32205 -128.32068 84.102381 main.1)
     LabelSelectionList : ()
     ObjectSelectionList : ()
     GraphicalSelection : #t
     ShowCoordinates : #f
     X : 377.32205
     Y : -176.80068
     Z : -37.076463
     OffsetX : 0
     OffsetY : 0
     OffsetZ : 0
     Material point fluid-region-1 is created.
    S_MaterialPoints:
     AddChild: yes
     MaterialPointsName : void-region-1
     MptMethodType : Centroid of Objects
     NewRegionType : void
     LinkConstruction : no
     SelectionType : object
     ZoneSelectionList : ()
     ZoneLocation : ()
     LabelSelectionList : ()
     ObjectSelectionList : (inlet-1 inlet-2 inlet-3 main)
     GraphicalSelection : #t
     ShowCoordinates : #f
     X : 374.72205
     Y : -278.97751
     Z : -161.17007
     OffsetX : 0
     OffsetY : 0
     OffsetZ : 0
     Material point void-region-1 is created.




.. GENERATED FROM PYTHON SOURCE LINES 387-390

Define thresholds for leakages
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Define thresholds for potential leakages.

.. GENERATED FROM PYTHON SOURCE LINES 390-419

.. code-block:: default

    leakage_threshold = meshing.workflow.TaskObject["Define Leakage Threshold"]
    leakage_threshold.Arguments.set_state(
        {
            "AddChild": "yes",
            "FlipDirection": True,
            "PlaneDirection": "X",
            "RegionSelectionSingle": "void-region-1",
        }
    )
    leakage_threshold.AddChildToTask()

    leakage_threshold.InsertCompoundChildTask()
    leakage_1 = meshing.workflow.TaskObject["leakage-1"]
    leakage_1.Arguments.set_state(
        {
            "AddChild": "yes",
            "FlipDirection": True,
            "LeakageName": "leakage-1",
            "PlaneDirection": "X",
            "RegionSelectionSingle": "void-region-1",
        }
    )
    leakage_threshold.Arguments.set_state(
        {
            "AddChild": "yes",
        }
    )
    leakage_1.Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_LeakageDetection:
     AddChild: yes
     LeakageName: leakage-1
     SelectionType: identified region
     DeadRegionsList: ()
     RegionSelectionSingle: (void-region-1)
     DeadRegionsSize: 6.4
     PlaneClippingValue: 50
     PlaneDirection: X
     FlipDirection: #t




.. GENERATED FROM PYTHON SOURCE LINES 420-423

Review region settings
~~~~~~~~~~~~~~~~~~~~~~
Review the region settings.

.. GENERATED FROM PYTHON SOURCE LINES 423-461

.. code-block:: default

    update_region = meshing.workflow.TaskObject["Update Region Settings"]
    update_region.Arguments.set_state(
        {
            "AllRegionFilterCategories": ["2"] * 5 + ["1"] * 2,
            "AllRegionLeakageSizeList": ["none"] * 6 + ["6.4"],
            "AllRegionLinkedConstructionSurfaceList": ["n/a"] * 6 + ["no"],
            "AllRegionMeshMethodList": ["none"] * 6 + ["wrap"],
            "AllRegionNameList": [
                "main",
                "flow_pipe",
                "outpipe3",
                "object2",
                "object1",
                "void-region-1",
                "fluid-region-1",
            ],
            "AllRegionOversetComponenList": ["no"] * 7,
            "AllRegionSourceList": ["object"] * 5 + ["mpt"] * 2,
            "AllRegionTypeList": ["void"] * 6 + ["fluid"],
            "AllRegionVolumeFillList": ["none"] * 6 + ["tet"],
            "FilterCategory": "Identified Regions",
            "OldRegionLeakageSizeList": [""],
            "OldRegionMeshMethodList": ["wrap"],
            "OldRegionNameList": ["fluid-region-1"],
            "OldRegionOversetComponenList": ["no"],
            "OldRegionTypeList": ["fluid"],
            "OldRegionVolumeFillList": ["hexcore"],
            "RegionLeakageSizeList": [""],
            "RegionMeshMethodList": ["wrap"],
            "RegionNameList": ["fluid-region-1"],
            "RegionOversetComponenList": ["no"],
            "RegionTypeList": ["fluid"],
            "RegionVolumeFillList": ["tet"],
        }
    )
    update_region.Execute()






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ---------------- Regions Updated




.. GENERATED FROM PYTHON SOURCE LINES 462-465

Set mesh control options
~~~~~~~~~~~~~~~~~~~~~~~~
Set mesh control options.

.. GENERATED FROM PYTHON SOURCE LINES 465-468

.. code-block:: default


    meshing.workflow.TaskObject["Choose Mesh Control Options"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (WrapSizeFieldFileName) not found in dict
    (TargeSizeFieldFileName) not found in dict




.. GENERATED FROM PYTHON SOURCE LINES 469-472

Generate surface mesh
~~~~~~~~~~~~~~~~~~~~~
Generate the surface mesh.

.. GENERATED FROM PYTHON SOURCE LINES 474-477

.. image:: /_static/exhaust_system_013.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 477-480

.. code-block:: default


    meshing.workflow.TaskObject["Generate the Surface Mesh"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Writing "/mnt/pyfluent/FM_18834b843c24_280/TaskObject16.msh.h5" ...
    writing 19 node zones
    writing 11 edge zones 
    writing 13 face zones 
    done.Writing "/mnt/pyfluent/FM_18834b843c24_280//ftm-wf-out-exhaust_system.msh.h5" ...
    writing 19 node zones
    writing 11 edge zones 
    writing 13 face zones 
    done.Scoped sizing written to the file "/mnt/pyfluent/FM_18834b843c24_280//ftm-wf-out-exhaust_system-target.szcontrol" successfully
    Scoped sizing written to the file "/mnt/pyfluent/FM_18834b843c24_280//ftm-wf-out-exhaust_system-initial.szcontrol" successfully











    Reading "/mnt/pyfluent/FM_18834b843c24_280//ftm-wf-out-exhaust_system-target.sf"...

     Read 41961 vertices
        initializing octree...
        refining octree...
        projecting...
     Wrap-v2 projection mode set to 1
     Projection completed in 0.330000 s, 150742.424242 nodes/sec




    Index exceed valid range, 2.
    No grid of ID, 2.
    Min mesh size 0.000000 is too small.Max mesh size 0.000000 is too small.    initializing octree...
        refining octree...





    Reading "/mnt/pyfluent/FM_18834b843c24_280//ftm-wf-out-exhaust_system-target.sf"...

     Read 41961 vertices
    Found 0 nodes with invalid normals
    Found 0 nodes with invalid normals
    Found 0 faces with invalid dihedral angle





    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0043763002 minutes (7.2938601e-05 hours)




    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0015368501 minutes (2.5614434e-05 hours)




    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0015634974 minutes (2.6058621e-05 hours)











    Reading "/mnt/pyfluent/FM_18834b843c24_280/ftm-wf-out-exhaust_system.msh.h5" ...
    3D mesh
    nodes: 23322
    edges: 4754
    faces: 33780 
    cells: 0 
    reading 19 node zones
    reading 11 edge zones
    reading 13 face zones
    appending mesh...
    done.
    generating pointers...done.
    extracting boundary entities...
     37442 boundary nodes.
     62002 boundary faces.
     14 boundary face zones.
    done.

    Surface Mesh:
    ==============================================================================
    Computed SF in -----------------------------------0.032624801 minutes (0.00054374668 hours).
    Merge zones in -----------------------------------0 minutes (0 hours).
    Automatic closing of holes (inner wrap) in -----0.069907999 minutes (0.0011651333 hours).
    Wrapped all material point regions in ------------0.21283913 minutes (0.0035473189 hours).
    Surface mesh all fluid objects in ----------------0 minutes (0 hours).
    Surface Improved in ------------------------------0.056361218 minutes (0.00093935364 hours).
    Surface Improved (resolve_int) in ----------------0.0084017356 minutes (0.00014002893 hours).
    Connected all fluid mesh objects in --------------4.1166941e-06 minutes (6.8611569e-08 hours).
    Compute Volume-Fill Regions in -------------------0 minutes (0 hours).
    Solid surface mesh generated and Improved in -----0 minutes (0 hours).
    ==============================================================================
    Total (surface mesh)                              0.38013909 minutes (0.0063356515 hours)


    ------------------------- --------------------- -------------------- ---------------- ----------
                         name skewed-cells (> 0.80)    averaged-skewness maximum-skewness face count
    ------------------------- --------------------- -------------------- ---------------- ----------
               fluid-region-1                     0          0.037534682       0.77207632      28222

    ------------------------- --------------------- -------------------- ---------------- ----------
                         name skewed-cells (> 0.80)    averaged-skewness maximum-skewness face count
    ------------------------- --------------------- -------------------- ---------------- ----------
              Overall Summary                     0          0.037534682       0.77207632      28222




.. GENERATED FROM PYTHON SOURCE LINES 481-484

Confirm and update boundaries
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Confirm and update the boundaries.

.. GENERATED FROM PYTHON SOURCE LINES 484-487

.. code-block:: default


    meshing.workflow.TaskObject["Update Boundaries"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ---------------- Boundary Conditions Updated




.. GENERATED FROM PYTHON SOURCE LINES 488-491

Add boundary layers
~~~~~~~~~~~~~~~~~~~
Add boundary layers.

.. GENERATED FROM PYTHON SOURCE LINES 491-505

.. code-block:: default


    meshing.workflow.TaskObject["Add Boundary Layers"].AddChildToTask()

    meshing.workflow.TaskObject["Add Boundary Layers"].InsertCompoundChildTask()

    meshing.workflow.TaskObject["aspect-ratio_1"].Arguments.set_state(
        {
            "BLControlName": "aspect-ratio_1",
        }
    )
    meshing.workflow.TaskObject["Add Boundary Layers"].Arguments.set_state({})

    meshing.workflow.TaskObject["aspect-ratio_1"].Execute()








.. GENERATED FROM PYTHON SOURCE LINES 506-509

Generate volume mesh
~~~~~~~~~~~~~~~~~~~~
Generate the volume mesh.

.. GENERATED FROM PYTHON SOURCE LINES 511-514

.. image:: /_static/exhaust_system_014.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 514-533

.. code-block:: default

    volume_mesh_gen = meshing.workflow.TaskObject["Generate the Volume Mesh"]
    volume_mesh_gen.Arguments.set_state(
        {
            "AllRegionNameList": [
                "main",
                "flow_pipe",
                "outpipe3",
                "object2",
                "object1",
                "void-region-1",
                "fluid-region-1",
            ],
            "AllRegionSizeList": ["11.33375"] * 7,
            "AllRegionVolumeFillList": ["none"] * 6 + ["tet"],
            "EnableParallel": True,
        }
    )
    volume_mesh_gen.Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Writing "/mnt/pyfluent/FM_18834b843c24_280/TaskObject23.msh.h5" ...
    writing 21 node zones
    writing 11 edge zones 
    writing 22 face zones 
    done.




    Warning: growing more than 1 layer of prisms may take a long time.

        warning: material point fluid-region-1 ignored because face zone label with same name exists.
    done

    creating backup for object "fluid-region-1"...done.

    Generating initial mesh...
        the existing Size Field will be used.

    Refining mesh...

    No cell above quality 0.960000.
    No cell above quality 0.960000.
    No cell above quality 0.960000.

    No cells below quality 0.0001.

    Release:        (23 2 0  2023) 
    Build Time:     May 29 2023 07:35:15 EDT 
    Build ID:       10212

    Mesh Info for exhaust_system:


    Total cell count: 257808


    Wall-Clock Usage (Estimate) for exhaust_system:
    Surface Mesh:
    ==============================================================================
    Computed SF in -----------------------------------0.032624801 minutes (0.00054374668 hours).
    Merge zones in -----------------------------------0 minutes (0 hours).
    Automatic closing of holes (inner wrap) in -----0.069907999 minutes (0.0011651333 hours).
    Wrapped all material point regions in ------------0.21283913 minutes (0.0035473189 hours).
    Surface mesh all fluid objects in ----------------0 minutes (0 hours).
    Surface Improved in ------------------------------0.056361218 minutes (0.00093935364 hours).
    Surface Improved (resolve_int) in ----------------0.0084017356 minutes (0.00014002893 hours).
    Connected all fluid mesh objects in --------------4.1166941e-06 minutes (6.8611569e-08 hours).
    Compute Volume-Fill Regions in -------------------0 minutes (0 hours).
    Solid surface mesh generated and Improved in -----0 minutes (0 hours).
    ==============================================================================
    Total (surface mesh)                              0.38013909 minutes (0.0063356515 hours)

    Volume Mesh:
    ==============================================================================
    Continuous Prisms generated and Improved in ------0.067915352 minutes (0.0011319225 hours).
    Volume-fill in -----------------------------------0.062375311 minutes (0.0010395885 hours).
    Solid volume mesh generated and Improved in ------0.0063356797 minutes (0.00010559466 hours).
    Rezoned and final volume mesh improve in ---------0.023051047 minutes (0.00038418412 hours).
    ==============================================================================
    Total (volume mesh)                               0.15967739 minutes (0.0026612898 hours)
    ==============================================================================
    Total                                             0.53981648 minutes (0.0089969413 hours)
    ==============================================================================



    Memory Usage for exhaust_system:

    ------------------------------------------------------------------------------
           | Virtual Mem Usage (GB)   | Resident Mem Usage(GB)   |              
    ID     | Current      Peak        | Current      Peak        | Page Faults  
    ------------------------------------------------------------------------------
    host   | 1.15776      1.15776     | 0.523903     0.523903    | 0          
    n0     | 4.37824      4.72844     | 0.449108     1.14883     | 877        
    n1     | 3.75223      3.80875     | 0.233776     0.233776    | 87         
    ------------------------------------------------------------------------------
    Total  | 9.28823      9.69494     | 1.20679      1.90651     | 964        
    ------------------------------------------------------------------------------

    ------------------------------------------------------------------------------------------------
                        | Virtual Mem Usage (GB)    | Resident Mem Usage(GB)    | System Mem (GB)          
    Hostname            | Current      Peak         | Current      Peak         |                          
    ------------------------------------------------------------------------------------------------
    18834b843c24        | 9.28823      9.69494      | 1.20679      1.90651      | 31.3534      
    ------------------------------------------------------------------------------------------------
    Total               | 9.28823      9.69494      | 1.20679      1.90651      |           
    ------------------------------------------------------------------------------------------------




    Quality Report for exhaust_system:
    Report of Cell Orthogonal Quality:

                  Region Name   Quality<0.100   Quality<0.040   Min Quality Cell Count
    -------------------------  --------------  -------------- ------------- ----------
               fluid-region-1               0               0         0.142     257808

                  Region Name   Quality<0.100   Quality<0.040   Min Quality Cell Count
    -------------------------  --------------  -------------- ------------- ----------
              Overall Summary               0               0         0.142     257808


    Parallel Partitions:





.. GENERATED FROM PYTHON SOURCE LINES 534-537

Check mesh
~~~~~~~~~~
Check the mesh.

.. GENERATED FROM PYTHON SOURCE LINES 537-540

.. code-block:: default


    meshing.tui.mesh.check_mesh()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Domain extents.
      x-coordinate: min = 2.133220e+02, max = 5.413220e+02.
      y-coordinate: min = -3.613432e+02, max = -1.283207e+02.
      z-coordinate: min = -3.692476e+02, max = 8.410238e+01.
    Volume statistics.
      minimum volume: 1.752988e-01.
      maximum volume: 3.237063e+02.
        total volume: 5.478690e+06.
    Face area statistics.
       minimum face area: 4.247814e-03.
       maximum face area: 1.743890e+04.
       average face area: 1.209202e+01.
    Checking number of nodes per edge.
    Checking number of nodes per face.
    Checking number of nodes per cell.
    Checking number of faces/neighbors per cell.
    Checking cell faces/neighbors.
    Checking isolated cells.
    Checking face handedness.
    Checking periodic face pairs.
    Checking face children.
    Checking face zone boundary conditions.
    Checking for invalid node coordinates.
    Checking poly cells.
    Checking zones.
    Checking neighborhood.
    Checking interfaces.
    Checking modified centroid.
    Checking non-positive or too small area.
    Checking face zones thread type.




.. GENERATED FROM PYTHON SOURCE LINES 541-549

Solve and postprocess
---------------------
Once you have completed the fault tolerate meshing workflow, you can solve and
postprcess the results.

Switch to solution mode
~~~~~~~~~~~~~~~~~~~~~~~
Switch to the solution mode.

.. GENERATED FROM PYTHON SOURCE LINES 549-554

.. code-block:: default


    solver = meshing.switch_to_solver()

    solver.tui.mesh.check()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Done.
    Preparing...


    deleting exterior entities...done.
    unused zone boundary-node-216 removed
    unused zone boundary-node-218 removed

    *********************************************
    Info: Your license enables 4-way parallel execution.
    For faster simulations, please start the application with the appropriate parallel options.
    *********************************************


    Transferring mesh
            creating threads... done
            transferring nodes... done
            transferring cells... done
            transferring faces... done
            post mesh transfer operations... done
    done

    Building...
         mesh
            auto partitioning mesh by Metis (fast),
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 101178/1577 = 64.1585
         materials,
         interface,
         domains,
         zones,
            outlet-1
            inlet-3
            inlet-2
            inlet-1
            interior--fluid-region-1
            main.1
            flow-pipe
            outpipe3.1
            object2.1
            object1.1
            fluid-region-1
         surfaces,
         parallel,
    Done.
    Mesh is now scaled to meters.

     Domain Extents:
       x-coordinate: min (m) = 2.154117e-01, max (m) = 5.349968e-01
       y-coordinate: min (m) = -3.600576e-01, max (m) = -1.293207e-01
       z-coordinate: min (m) = -3.627032e-01, max (m) = 8.410238e-02
     Volume statistics:
       minimum volume (m3): 1.752988e-10
       maximum volume (m3): 3.237063e-07
         total volume (m3): 5.478690e-03
     Face area statistics:
       minimum face area (m2): 3.946046e-07
       maximum face area (m2): 1.027569e-04
     Checking mesh.....................................
    Done.




.. GENERATED FROM PYTHON SOURCE LINES 555-558

Set units for length
~~~~~~~~~~~~~~~~~~~~
Set the units for length.

.. GENERATED FROM PYTHON SOURCE LINES 558-561

.. code-block:: default


    solver.tui.define.units("length", "mm")








.. GENERATED FROM PYTHON SOURCE LINES 562-565

Select turbulence model
~~~~~~~~~~~~~~~~~~~~~~~
Select the kw sst turbulence model.

.. GENERATED FROM PYTHON SOURCE LINES 565-568

.. code-block:: default


    solver.tui.define.models.viscous.kw_sst("yes")








.. GENERATED FROM PYTHON SOURCE LINES 569-573

Set velocity and turbulence boundary conditions for first inlet
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the velocity and turbulence boundary conditions for the first inlet
(``inlet-1``).

.. GENERATED FROM PYTHON SOURCE LINES 573-578

.. code-block:: default


    solver.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet-1", [], "vmag", "no", 1, "quit"
    )








.. GENERATED FROM PYTHON SOURCE LINES 579-583

Set same boundary conditions for other velocity inlets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the same boundary conditions for the other velocity inlets (``inlet_2``
and ``inlet_3``).

.. GENERATED FROM PYTHON SOURCE LINES 583-586

.. code-block:: default


    solver.tui.define.boundary_conditions.copy_bc("inlet-1", "inlet-2", "inlet-3", ())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     Copy inlet-1 boundary conditions to inlet-3
    Copy inlet-1 boundary conditions to inlet-2




.. GENERATED FROM PYTHON SOURCE LINES 587-590

Set boundary conditions at outlet
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the boundary conditions at the outlet (``outlet-1``).

.. GENERATED FROM PYTHON SOURCE LINES 590-596

.. code-block:: default


    solver.tui.define.boundary_conditions.set.pressure_outlet(
        "outlet-1", [], "turb-intensity", 5, "quit"
    )
    solver.tui.solve.monitors.residual.plot("yes")








.. GENERATED FROM PYTHON SOURCE LINES 597-600

Initialize flow field
~~~~~~~~~~~~~~~~~~~~~
Initialize the flow field using hybrid initialization.

.. GENERATED FROM PYTHON SOURCE LINES 600-603

.. code-block:: default


    solver.tui.solve.initialize.hyb_initialization()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Initialize using the hybrid initialization method.

    Checking case topology... 
    -This case has both inlets & outlets 
    -Pressure information is not available at the boundaries.
     Case will be initialized with constant pressure

            iter            scalar-0

            1               1.000000e+00
            2               1.960622e-04
            3               3.118493e-05
            4               8.314983e-06
            5               4.125418e-06
            6               4.911199e-06
            7               2.160226e-06
            8               3.857851e-06
            9               1.213630e-06
            10              1.517617e-06

    Hybrid initialization is done.
    during Hybrid Initialization.




.. GENERATED FROM PYTHON SOURCE LINES 604-607

Start calculation
~~~~~~~~~~~~~~~~~
Start the calculation by requesting 100 iterations.

.. GENERATED FROM PYTHON SOURCE LINES 609-612

.. image:: /_static/exhaust_system_015.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 612-618

.. code-block:: default


    solver.tui.solve.set.number_of_iterations(100)
    solver.tui.solve.iterate()

    # solver.tui.report.volume_integrals.volume("fluid-region-1","()","yes","volume.vrp")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
         1  1.0000e+00  6.8528e-03  7.2391e-03  8.0488e-03  6.1119e-01  2.8094e+00  0:03:14   99
         2  4.4774e-01  4.3615e-03  4.8364e-03  6.0979e-03  1.6663e-01  1.5954e-01  0:03:19   98
         3  3.4148e-01  2.2755e-03  2.6634e-03  4.1670e-03  1.1056e-01  1.0587e-01  0:03:36   97
         4  3.2602e-01  1.4553e-03  1.8137e-03  2.9490e-03  6.9228e-02  5.6536e-02  0:03:30   96
         5  3.2073e-01  1.0561e-03  1.3498e-03  2.7590e-03  5.8415e-02  3.4446e-02  0:03:25   95
         6  2.9297e-01  7.6095e-04  1.0596e-03  2.2401e-03  4.5226e-02  2.3243e-02  0:03:17   94
         7  2.7809e-01  6.4371e-04  9.0748e-04  2.1059e-03  3.8841e-02  1.8272e-02  0:03:10   93
         8  2.6490e-01  5.5029e-04  8.0615e-04  1.8840e-03  3.5144e-02  1.5531e-02  0:03:04   92
         9  2.6054e-01  5.2386e-04  7.4733e-04  1.8745e-03  3.1554e-02  1.2657e-02  0:02:58   91
        10  2.5061e-01  4.5060e-04  6.6160e-04  1.6674e-03  2.7881e-02  1.0499e-02  0:02:55   90
        11  2.4026e-01  4.2641e-04  6.2353e-04  1.6171e-03  2.3763e-02  9.1593e-03  0:02:51   89

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        12  2.2856e-01  3.9676e-04  5.8482e-04  1.5061e-03  2.1042e-02  7.7896e-03  0:02:47   88
        13  2.1806e-01  3.7984e-04  5.5650e-04  1.4513e-03  1.8657e-02  6.9517e-03  0:02:45   87
        14  2.0896e-01  3.5980e-04  5.2368e-04  1.3510e-03  1.6485e-02  6.3383e-03  0:02:43   86
        15  2.0040e-01  3.4969e-04  5.0166e-04  1.2759e-03  1.4477e-02  5.6913e-03  0:02:40   85
        16  1.9349e-01  3.5266e-04  4.8772e-04  1.2016e-03  1.3022e-02  5.2864e-03  0:02:36   84
        17  1.8710e-01  3.5167e-04  4.7203e-04  1.1190e-03  1.1467e-02  4.9216e-03  0:02:34   83
        18  1.8138e-01  3.5994e-04  4.6671e-04  1.0510e-03  1.0439e-02  4.5509e-03  0:02:32   82
        19  1.7605e-01  3.7057e-04  4.6486e-04  9.8701e-04  9.4825e-03  4.2977e-03  0:02:29   81
        20  1.7099e-01  3.8157e-04  4.6589e-04  9.2838e-04  8.8240e-03  3.9803e-03  0:02:27   80
        21  1.6630e-01  3.9676e-04  4.7218e-04  8.8649e-04  8.3060e-03  3.8668e-03  0:02:24   79
        22  1.6127e-01  4.0596e-04  4.7573e-04  8.3651e-04  7.8313e-03  3.6755e-03  0:02:22   78

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        23  1.5557e-01  4.1313e-04  4.7925e-04  7.9630e-04  7.4516e-03  3.6022e-03  0:02:21   77
        24  1.5059e-01  4.1984e-04  4.8179e-04  7.5741e-04  7.1652e-03  3.4674e-03  0:02:19   76
        25  1.4525e-01  4.2301e-04  4.8010e-04  7.2302e-04  6.9202e-03  3.3785e-03  0:02:18   75
        26  1.4051e-01  4.2349e-04  4.7425e-04  6.9154e-04  6.6867e-03  3.2442e-03  0:02:15   74
        27  1.3553e-01  4.2047e-04  4.6531e-04  6.6043e-04  6.4104e-03  3.0882e-03  0:02:14   73
        28  1.3027e-01  4.1416e-04  4.5296e-04  6.3019e-04  6.1127e-03  2.9431e-03  0:02:12   72
        29  1.2534e-01  4.0518e-04  4.3875e-04  6.0278e-04  5.7648e-03  2.7705e-03  0:02:10   71
        30  1.2054e-01  3.8991e-04  4.2162e-04  5.7229e-04  5.4512e-03  2.6305e-03  0:02:07   70
        31  1.1601e-01  3.7463e-04  4.0378e-04  5.4673e-04  5.1172e-03  2.4740e-03  0:02:05   69
        32  1.1174e-01  3.5638e-04  3.8352e-04  5.1905e-04  4.7733e-03  2.3243e-03  0:02:03   68
        33  1.0734e-01  3.3745e-04  3.6200e-04  4.9103e-04  4.4203e-03  2.1822e-03  0:02:02   67

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        34  1.0316e-01  3.1875e-04  3.4094e-04  4.6850e-04  4.1045e-03  2.0381e-03  0:02:01   66
        35  9.9119e-02  2.9915e-04  3.1841e-04  4.4252e-04  3.7827e-03  1.9000e-03  0:01:59   65
        36  9.5133e-02  2.8069e-04  2.9717e-04  4.2229e-04  3.4918e-03  1.7705e-03  0:01:56   64
        37  9.1015e-02  2.6347e-04  2.7583e-04  3.9831e-04  3.1718e-03  1.6425e-03  0:01:54   63
        38  8.7134e-02  2.4682e-04  2.5612e-04  3.7763e-04  2.9096e-03  1.5315e-03  0:01:53   62
        39  8.3558e-02  2.3199e-04  2.3861e-04  3.5655e-04  2.6451e-03  1.4239e-03  0:01:51   61
        40  8.0251e-02  2.1805e-04  2.2279e-04  3.3740e-04  2.4213e-03  1.3272e-03  0:01:49   60
        41  7.7087e-02  2.0591e-04  2.0884e-04  3.1792e-04  2.2121e-03  1.2471e-03  0:01:47   59
        42  7.4496e-02  1.9537e-04  1.9684e-04  3.0158e-04  2.0407e-03  1.1745e-03  0:01:45   58
        43  7.2007e-02  1.8639e-04  1.8630e-04  2.8502e-04  1.8728e-03  1.1185e-03  0:01:43   57
        44  6.9807e-02  1.7821e-04  1.7720e-04  2.7096e-04  1.7456e-03  1.0656e-03  0:01:41   56

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        45  6.7629e-02  1.7088e-04  1.6939e-04  2.5808e-04  1.6322e-03  1.0287e-03  0:01:39   55
        46  6.5740e-02  1.6477e-04  1.6324e-04  2.4766e-04  1.5578e-03  1.0008e-03  0:01:37   54
        47  6.3885e-02  1.5944e-04  1.5799e-04  2.3831e-04  1.4928e-03  9.8508e-04  0:01:36   53
        48  6.2283e-02  1.5560e-04  1.5403e-04  2.3056e-04  1.4617e-03  9.7051e-04  0:01:35   52
        49  6.0791e-02  1.5193e-04  1.5018e-04  2.2431e-04  1.4382e-03  9.6191e-04  0:01:33   51
        50  5.9540e-02  1.4956e-04  1.4773e-04  2.1922e-04  1.4330e-03  9.5419e-04  0:01:31   50
        51  5.8260e-02  1.4698e-04  1.4509e-04  2.1515e-04  1.4315e-03  9.5155e-04  0:01:29   49
        52  5.7066e-02  1.4543e-04  1.4334e-04  2.1148e-04  1.4501e-03  9.4791e-04  0:01:27   48
        53  5.5781e-02  1.4350e-04  1.4150e-04  2.0898e-04  1.4718e-03  9.6283e-04  0:01:26   47
        54  5.4812e-02  1.4230e-04  1.4020e-04  2.0641e-04  1.4792e-03  9.3468e-04  0:01:24   46
        55  5.3761e-02  1.4053e-04  1.3880e-04  2.0438e-04  1.5192e-03  9.8429e-04  0:01:22   45

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        56  5.3242e-02  1.4072e-04  1.3864e-04  2.0440e-04  1.5210e-03  9.3448e-04  0:01:20   44
        57  5.1669e-02  1.3739e-04  1.3571e-04  2.0085e-04  1.4885e-03  9.4183e-04  0:01:18   43
        58  5.1158e-02  1.3728e-04  1.3523e-04  2.0046e-04  1.4831e-03  9.0744e-04  0:01:17   42
        59  4.9712e-02  1.3301e-04  1.3222e-04  1.9561e-04  1.4331e-03  9.1855e-04  0:01:15   41
        60  4.9123e-02  1.3265e-04  1.3215e-04  1.9480e-04  1.4192e-03  8.8055e-04  0:01:13   40
        61  4.8009e-02  1.2853e-04  1.2966e-04  1.8975e-04  1.3920e-03  8.8148e-04  0:01:11   39
        62  4.7483e-02  1.2859e-04  1.3035e-04  1.8900e-04  1.3671e-03  8.5700e-04  0:01:12   38
        63  4.6528e-02  1.2514e-04  1.2832e-04  1.8425e-04  1.3498e-03  8.5826e-04  0:01:10   37
        64  4.6166e-02  1.2548e-04  1.2888e-04  1.8341e-04  1.3333e-03  8.3517e-04  0:01:08   36
        64  4.6166e-02  1.2548e-04  1.2888e-04  1.8341e-04  1.3333e-03  8.3517e-04  0:01:08   36
        65  4.5167e-02  1.2230e-04  1.2689e-04  1.7920e-04  1.3181e-03  8.3824e-04  0:01:05   35
        66  4.4794e-02  1.2267e-04  1.2702e-04  1.7873e-04  1.3110e-03  8.2248e-04  0:01:03   34

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        67  4.3751e-02  1.1982e-04  1.2458e-04  1.7541e-04  1.3116e-03  8.3213e-04  0:01:01   33
        68  4.3378e-02  1.2016e-04  1.2433e-04  1.7504e-04  1.3138e-03  8.1477e-04  0:00:59   32
        69  4.2383e-02  1.1708e-04  1.2135e-04  1.7174e-04  1.3142e-03  8.2689e-04  0:00:57   31
        70  4.2090e-02  1.1745e-04  1.2094e-04  1.7225e-04  1.3131e-03  8.1123e-04  0:00:55   30
        71  4.1177e-02  1.1455e-04  1.1725e-04  1.6859e-04  1.3072e-03  8.1533e-04  0:00:53   29
        72  4.0820e-02  1.1476e-04  1.1673e-04  1.6929e-04  1.3019e-03  8.0619e-04  0:00:51   28
        73  3.9906e-02  1.1154e-04  1.1286e-04  1.6540e-04  1.2984e-03  8.0997e-04  0:00:49   27
        74  3.9493e-02  1.1159e-04  1.1242e-04  1.6615e-04  1.2909e-03  7.9914e-04  0:00:47   26
        75  3.8554e-02  1.0828e-04  1.0904e-04  1.6244e-04  1.2874e-03  8.0297e-04  0:00:45   25
        76  3.8089e-02  1.0804e-04  1.0896e-04  1.6297e-04  1.2783e-03  7.8891e-04  0:00:44   24
        77  3.7093e-02  1.0449e-04  1.0577e-04  1.5895e-04  1.2662e-03  7.8829e-04  0:00:42   23

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        78  3.6565e-02  1.0416e-04  1.0569e-04  1.5912e-04  1.2450e-03  7.6875e-04  0:00:40   22
        79  3.5634e-02  1.0043e-04  1.0237e-04  1.5416e-04  1.2246e-03  7.5820e-04  0:00:38   21
        80  3.5196e-02  9.9934e-05  1.0209e-04  1.5331e-04  1.1902e-03  7.3416e-04  0:00:37   20
        81  3.4238e-02  9.6180e-05  9.8739e-05  1.4772e-04  1.1659e-03  7.2135e-04  0:00:35   19
        82  3.3695e-02  9.5678e-05  9.8121e-05  1.4648e-04  1.1297e-03  6.9785e-04  0:00:33   18
        83  3.2646e-02  9.2013e-05  9.4327e-05  1.4046e-04  1.1023e-03  6.8462e-04  0:00:31   17
        84  3.2048e-02  9.1623e-05  9.3486e-05  1.3919e-04  1.0676e-03  6.6282e-04  0:00:29   16
        85  3.1012e-02  8.8000e-05  8.9825e-05  1.3302e-04  1.0493e-03  6.5284e-04  0:00:27   15
        86  3.0438e-02  8.7778e-05  8.8800e-05  1.3224e-04  1.0264e-03  6.3552e-04  0:00:26   14
        87  2.9428e-02  8.4416e-05  8.5225e-05  1.2671e-04  1.0208e-03  6.3205e-04  0:00:24   13
        88  2.8954e-02  8.4187e-05  8.4482e-05  1.2675e-04  1.0066e-03  6.1661e-04  0:00:22   12

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        89  2.8004e-02  8.0782e-05  8.1225e-05  1.2195e-04  1.0044e-03  6.1461e-04  0:00:20   11
        90  2.7560e-02  8.0512e-05  8.0715e-05  1.2246e-04  9.9252e-04  5.9824e-04  0:00:18   10
        91  2.6710e-02  7.6775e-05  7.7551e-05  1.1780e-04  9.9197e-04  5.9604e-04  0:00:16    9
        92  2.6396e-02  7.6258e-05  7.7038e-05  1.1829e-04  9.7370e-04  5.7694e-04  0:00:15    8
        93  2.5621e-02  7.2493e-05  7.3833e-05  1.1354e-04  9.6476e-04  5.7007e-04  0:00:13    7
        94  2.5361e-02  7.1679e-05  7.3088e-05  1.1334e-04  9.3289e-04  5.4573e-04  0:00:11    6
        95  2.4552e-02  6.7683e-05  6.9548e-05  1.0806e-04  9.1532e-04  5.3575e-04  0:00:09    5
        96  2.4184e-02  6.6878e-05  6.8662e-05  1.0723e-04  8.7405e-04  5.1002e-04  0:00:07    4
        97  2.3334e-02  6.2890e-05  6.5034e-05  1.0160e-04  8.5109e-04  4.9927e-04  0:00:05    3
        98  2.2985e-02  6.2205e-05  6.4088e-05  1.0020e-04  8.0421e-04  4.7181e-04  0:00:04    2
        99  2.2111e-02  5.8362e-05  6.0207e-05  9.4053e-05  7.8004e-04  4.6224e-04  0:00:02    1

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
       100  2.1726e-02  5.7985e-05  5.9162e-05  9.2438e-05  7.3379e-04  4.3761e-04  0:00:00    0




.. GENERATED FROM PYTHON SOURCE LINES 619-622

Create path lines
~~~~~~~~~~~~~~~~~
Create path lines highlighting the flow field.

.. GENERATED FROM PYTHON SOURCE LINES 624-627

.. image:: /_static/exhaust_system_016.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 627-646

.. code-block:: default


    solver.tui.display.objects.create(
        "pathlines",
        "pathlines-1",
        "field",
        "time",
        "accuracy-control",
        "tolerance",
        "0.001",
        "skip",
        "5",
        "surfaces-list",
        "inlet-1",
        "inlet-2",
        "inlet-3",
        "()",
        "quit",
    )








.. GENERATED FROM PYTHON SOURCE LINES 647-650

Create iso-surface
~~~~~~~~~~~~~~~~~~
Create an iso-surface through the manifold geometry.

.. GENERATED FROM PYTHON SOURCE LINES 650-661

.. code-block:: default


    solver.tui.surface.iso_surface(
        "x-coordinate",
        "surf-x-coordinate",
        "()",
        "fluid-region-1",
        "()",
        "380",
        "()",
    )








.. GENERATED FROM PYTHON SOURCE LINES 662-666

Create contours of velocity magnitude
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create contours of the velocity magnitude throughout the manifold
along with the mesh.

.. GENERATED FROM PYTHON SOURCE LINES 668-671

.. image:: /_static/exhaust_system_017.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 671-692

.. code-block:: default


    solver.tui.display.objects.create(
        "contour",
        "contour-velocity",
        "field",
        "velocity-magnitude",
        "surfaces-list",
        "surf-x-coordinate",
        "()",
        "node-values?",
        "no",
        "range-option",
        "auto-range-on",
        "global-range?",
        "no",
        "quit",
        "quit",
    )

    solver.tui.display.objects.create("mesh", "mesh-1", "surfaces-list", "*", "()", "quit")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    WARNING: "Smooth" contours can't be displayed when node-values is set to off. Changing the Coloring type to "Banded".




.. GENERATED FROM PYTHON SOURCE LINES 693-696

Create scene
~~~~~~~~~~~~
Create a scene containing the mesh and the contours.

.. GENERATED FROM PYTHON SOURCE LINES 698-701

.. image:: /_static/exhaust_system_018.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 701-718

.. code-block:: default


    solver.tui.display.objects.create(
        "scene",
        "scene-1",
        "graphics-objects",
        "add",
        "mesh-1",
        "transparency",
        "90",
        "quit",
        "add",
        "contour-velocity",
        "quit",
        "quit",
        "quit",
    )








.. GENERATED FROM PYTHON SOURCE LINES 719-722

Close Fluent
~~~~~~~~~~~~
Close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 722-724

.. code-block:: default


    solver.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (4 minutes 39.832 seconds)


.. _sphx_glr_download_examples_00-fluent_exhaust_system.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: exhaust_system.py <exhaust_system.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: exhaust_system.ipynb <exhaust_system.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
